# pixels-to-macros

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  analysis_options.yaml  pubspec.yaml  pyproject.toml
.github/workflows/: build-ios.yml  ci-ios.yml
assets/: recipes.json
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/models/: db_models.py  schemas.py
backend/app/routes/: auth.py  barcode.py  dashboard.py  food_analysis.py  grocery.py  logs.py  users.py
backend/app/services/: ai_recognition.py  auth_service.py  nutrition_calculator.py  suggestions.py  volume_estimation.py
data/FoodSeg103/: category_id.txt
data/FoodSeg103_mini/: category_id.txt
docs/: ios-setup.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info-additions.plist  Info.plist  ObjCExceptionCatcher.h  ObjCExceptionCatcher.m
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/: constants.dart  scan_state.dart
lib/models/: custom_meal.dart  food_data.dart  glucose_spike_model.dart  grocery_item.dart  ground_truth.dart  mascot_type.dart  meal_plan.dart  nutrient_data.dart  nutrition_goal.dart  recipe.dart  scan_benchmark.dart  scan_result.dart  serving_config.dart  user_preferences.dart
lib/providers/: analytics_provider.dart  benchmark_provider.dart  challenge_provider.dart  daily_intake_provider.dart  (+12 more)
scripts/: _debug_recipe.py  add_scanner_files.rb  build_recipes_json.py  clean_recipes.py  download_foodseg103.py  download_hf_foodseg103.py  fetch_mealdb_all.py  find_recipe_images.py  fix_nutrition.py  fix_parser.py  fix_recipes.py  generate_body.py  generate_icon.py  generate_mass_recipes.py  generate_recipes.py  generate_recipes_batch2.py  generate_recipes_batch3.py  make_mini_dataset.py  rebuild_recipes.py  start_foodseg_training.sh  update_recipe_steps.py
test/: recipe_goal_filter_test.dart  widget_test.dart
training/: colab_train.ipynb  dataset.py  export_coreml.py  requirements.txt  train.py
(+91 files in other folders)
